--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <title>Taladro DeWALT</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-   <link rel="stylesheet" href="../css/indexStyle.css">
+   <link rel="stylesheet" href="css/indexStyle.css">
    <!-- script de stripe -->
    <script async src="https://js.stripe.com/v3/buy-button.js"></script>
 </head>
@@ -47,13 +47,13 @@
                   <div id="productCarousel" class="carousel slide" data-bs-ride="carousel">
                      <div class="carousel-inner">
                         <div class="carousel-item active">
-                           <img src="../images/2.png" class="d-block w-100" alt="Taladro frontal">
+                           <img src="images/2.png" class="d-block w-100" alt="Taladro frontal">
                         </div>
                         <div class="carousel-item">
-                           <img src="../images/1.png" class="d-block w-100" alt="Taladro lateral">
+                           <img src="images/1.png" class="d-block w-100" alt="Taladro lateral">
                         </div>
                         <div class="carousel-item">
-                           <img src="../images/3.png" class="d-block w-100" alt="Taladro con caja">
+                           <img src="images/3.png" class="d-block w-100" alt="Taladro con caja">
                         </div>
                      </div>
                      <button class="carousel-control-prev" type="button" data-bs-target="#productCarousel"
