--- a/succesfull.html
+++ b/succesfull.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resumen de Compra</title>
-    <link rel="stylesheet" href="../css/succesfull.css">
+    <link rel="stylesheet" href="css/succesfull.css">
 </head>
 
 <body>
